@@ -68,12 +68,13 @@ class RasterBlocksTest(unittest.TestCase):
     def test_blocks(self):
         with rasterio.open('tests/data/RGB.byte.tif') as s:
             self.assertEqual(len(s.block_shapes), 3)
-            self.assertEqual(s.block_shapes, ((3, 791), (3, 791), (3, 791)))
+            self.assertEqual(s.block_shapes, [(3, 791), (3, 791), (3, 791)])
             itr = s.block_windows(1)
             (j, i), first = next(itr)
             self.assertEqual((j, i), (0, 0))
             self.assertEqual(first, windows.Window.from_slices((0, 3), (0, 791)))
             itr = s.block_windows()
+
             (j, i), first = next(itr)
             self.assertEqual((j, i), (0, 0))
             self.assertEqual(first, windows.Window.from_slices((0, 3), (0, 791)))
