@@ -19,11 +19,11 @@ def test_cmyk_interp(tmpdir):
     tiffname = str(tmpdir.join('foo.tif'))
     with rasterio.open(tiffname, 'w', **profile) as dst:
         assert dst.profile['count'] == 4
-        assert dst.colorinterp == (
+        assert dst.colorinterp == [
             ColorInterp.cyan,
             ColorInterp.magenta,
             ColorInterp.yellow,
-            ColorInterp.black)
+            ColorInterp.black]
 
 
 @requires_gdal22(reason="Some versions prior to 2.2.2 segfault on a Mac OSX "
@@ -37,8 +37,8 @@ def test_ycbcr_interp(tmpdir):
     meta['count'] = 3
     tiffname = str(tmpdir.join('foo.tif'))
     with rasterio.open(tiffname, 'w', **meta) as dst:
-        assert dst.colorinterp == (
-            ColorInterp.red, ColorInterp.green, ColorInterp.blue)
+        assert dst.colorinterp == [
+            ColorInterp.red, ColorInterp.green, ColorInterp.blue]
 
 
 @pytest.mark.parametrize("dtype", [rasterio.ubyte, rasterio.int16])
@@ -62,17 +62,17 @@ def test_set_colorinterp(path_rgba_byte_tif, tmpdir, dtype):
 
     # This is should be the default color interpretation of the copied
     # image.  GDAL defines these defaults, not Rasterio.
-    src_ci = (
+    src_ci = [
         ColorInterp.gray,
         ColorInterp.undefined,
         ColorInterp.undefined,
-        ColorInterp.undefined)
+        ColorInterp.undefined]
 
-    dst_ci = (
+    dst_ci = [
         ColorInterp.alpha,
         ColorInterp.blue,
         ColorInterp.green,
-        ColorInterp.red)
+        ColorInterp.red]
 
     with rasterio.open(no_ci_path, 'r+') as src:
         assert src.colorinterp == src_ci
@@ -90,7 +90,7 @@ def test_set_colorinterp_all(path_4band_no_colorinterp, ci):
     """Test setting with all color interpretations."""
 
     with rasterio.open(path_4band_no_colorinterp, 'r+') as src:
-        all_ci = list(src.colorinterp)
+        all_ci = src.colorinterp
         all_ci[1] = ci
         src.colorinterp = all_ci
 
