@@ -11,10 +11,10 @@ def test_set_band_descriptions(tmpdir):
     with rasterio.open(
             tmptiff, 'w', count=3, height=256, width=256,
             **default_gtiff_profile) as dst:
-        assert dst.descriptions == (None, None, None)
+        assert dst.descriptions == [None, None, None]
         dst.descriptions = ["this is a test band", "this is another test band", None]
-        assert dst.descriptions == (
-            "this is a test band", "this is another test band", None)
+        assert dst.descriptions == [
+            "this is a test band", "this is another test band", None]
 
 
 @pytest.mark.parametrize('value', [[], ['x'], ['x', 'y', 'z']])
@@ -34,9 +34,9 @@ def test_set_band_descriptions_deprecated(tmpdir):
     with rasterio.open(
             tmptiff, 'w', count=2, height=256, width=256,
             **default_gtiff_profile) as dst:
-        assert dst.descriptions == (None, None)
+        assert dst.descriptions == [None, None]
         with pytest.warns(RasterioDeprecationWarning):
             dst.set_description(1, "this is a test band")
             dst.set_description(2, "this is another test band")
-            assert dst.descriptions == (
-                "this is a test band", "this is another test band")
+            assert dst.descriptions == [
+                "this is a test band", "this is another test band"]
