@@ -14,7 +14,7 @@ def test_nodata(tmpdir):
         with rasterio.open(dst_path, 'w', **src.meta) as dst:
             assert dst.nodata == 0.0
             assert dst.meta['nodata'] == 0.0
-            assert dst.nodatavals == (0.0, 0.0, 0.0)
+            assert dst.nodatavals == [0.0, 0.0, 0.0]
     info = subprocess.check_output([
         'gdalinfo', dst_path])
     pattern = b'Band 1.*?NoData Value=0'
@@ -32,7 +32,7 @@ def test_set_nodata(tmpdir):
         with rasterio.open(dst_path, 'w', **meta) as dst:
             assert dst.nodata == 42
             assert dst.meta['nodata'] == 42
-            assert dst.nodatavals == (42, 42, 42)
+            assert dst.nodatavals == [42, 42, 42]
     info = subprocess.check_output([
         'gdalinfo', dst_path])
     pattern = b'Band 1.*?NoData Value=42'
