@@ -32,9 +32,9 @@ class ReaderContextTest(unittest.TestCase):
             self.assertEqual(s.width, 791)
             self.assertEqual(s.height, 718)
             self.assertEqual(s.shape, (718, 791))
-            self.assertEqual(s.dtypes, tuple([rasterio.ubyte] * 3))
-            self.assertEqual(s.nodatavals, (0, 0, 0))
-            self.assertEqual(s.indexes, (1, 2, 3))
+            self.assertEqual(s.dtypes, [rasterio.ubyte] * 3)
+            self.assertEqual(s.nodatavals, [0, 0, 0])
+            self.assertEqual(s.indexes, [1, 2, 3])
             self.assertEqual(s.crs['init'], 'epsg:32618')
             self.assertTrue(s.crs.wkt.startswith('PROJCS'), s.crs.wkt)
             for i, v in enumerate((101985.0, 2611485.0, 339315.0, 2826915.0)):
@@ -54,8 +54,8 @@ class ReaderContextTest(unittest.TestCase):
         self.assertEqual(s.width, 791)
         self.assertEqual(s.height, 718)
         self.assertEqual(s.shape, (718, 791))
-        self.assertEqual(s.dtypes, tuple([rasterio.ubyte] * 3))
-        self.assertEqual(s.nodatavals, (0, 0, 0))
+        self.assertEqual(s.dtypes, [rasterio.ubyte] * 3)
+        self.assertEqual(s.nodatavals, [0, 0, 0])
         self.assertEqual(s.crs['init'], 'epsg:32618')
         self.assertEqual(
             s.transform,
