@@ -11,9 +11,9 @@ def test_set_units(tmpdir):
     with rasterio.open(
             tmptiff, 'w', count=3, height=256, width=256,
             **default_gtiff_profile) as dst:
-        assert dst.units == (None, None, None)
+        assert dst.units == [None, None, None]
         dst.units = ['meters', 'degC', None]
-        assert dst.units == ('meters', 'degC', None)
+        assert dst.units == ['meters', 'degC', None]
 
 
 @pytest.mark.parametrize('value', [['m'], ['m', 'ft', 'sec'], []])
@@ -33,8 +33,8 @@ def test_set_units_deprecated(tmpdir):
     with rasterio.open(
             tmptiff, 'w', count=2, height=256, width=256,
             **default_gtiff_profile) as dst:
-        assert dst.units == (None, None)
+        assert dst.units == [None, None]
         with pytest.warns(RasterioDeprecationWarning):
             dst.set_units(1, 'meters')
             dst.set_units(2, 'degC')
-            assert dst.units == ('meters', 'degC')
+            assert dst.units == ['meters', 'degC']
