@@ -76,9 +76,9 @@ def test_wrap_file(path_rgb_byte_tif):
             -8789636.7, 2700460.0, -8524406.4, 2943560.2)
         assert vrt.name.startswith('WarpedVRT(')
         assert vrt.name.endswith('tests/data/RGB.byte.tif)')
-        assert vrt.indexes == (1, 2, 3)
-        assert vrt.nodatavals == (0, 0, 0)
-        assert vrt.dtypes == ('uint8', 'uint8', 'uint8')
+        assert vrt.indexes == [1, 2, 3]
+        assert vrt.nodatavals == [0, 0, 0]
+        assert vrt.dtypes == ['uint8', 'uint8', 'uint8']
         assert vrt.read().shape == (3, 736, 803)
 
 
@@ -127,9 +127,9 @@ def test_wrap_s3():
             assert tuple(round(x, 1) for x in vrt.bounds) == (
                 9556764.6, 2345109.3, 9804595.9, 2598509.1)
             assert vrt.name == 'WarpedVRT(s3://landsat-pds/L8/139/045/LC81390452014295LGN00/LC81390452014295LGN00_B1.TIF)'
-            assert vrt.indexes == (1,)
-            assert vrt.nodatavals == (0,)
-            assert vrt.dtypes == ('uint16',)
+            assert vrt.indexes == [1]
+            assert vrt.nodatavals == [0]
+            assert vrt.dtypes == ['uint16']
             assert vrt.shape == (7827, 7655)
 
 
